--- a/flutter_calayer/pubspec.yaml
+++ b/flutter_calayer/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   bloc: ^0.14.0
   flutter_bloc: ^0.14.0
-  flutter_hsvcolor_picker: any
+  flutter_colorpicker: any
+  sprintf: ^4.0.0
 
 dev_dependencies:
   flutter_test:
